log/build_2024-04-24_10-51-26/image_pub/stderr.log
  File "/home/keime/ros2_ws/install/image_pub/lib/python3.10/site-packages/image_pub/image_publisher.py", line 6
    from cv2  # import aruco
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax

